<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_menu"
        android:icon="@drawable/baseline_filter_list_white_24"
        android:title="@string/filter"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_white_24"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />


    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_applications_white_24"
        android:title="@string/settings"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/attachment_manager"
        android:icon="@drawable/baseline_settings_applications_white_24"
        android:title="@string/attachment_manager"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/zotero_save"
        android:icon="@drawable/baseline_settings_applications_white_24"
        android:title="@string/zotero_save"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/force_resync"
        android:visible="false"
        android:title="@string/force_resync"
        app:showAsAction="collapseActionView"/>

</menu>