<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/sync_setup_layout"
                                                   tools:context=".SyncSetup.SyncSetupView"
                                                   tools:layout_editor_absoluteX="0dp"
                                                   tools:layout_editor_absoluteY="81dp">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/pick_your_cloud_storage_provider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
            android:id="@+id/radiogroup_cloudproviders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent">

        <RadioButton
                android:id="@+id/radio_zotero"
                android:textSize="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_zoterosync"
                android:text="@string/zotero_account_sync" />

        <RadioButton
                android:id="@+id/radio_zotero_manual_apikey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_zoterosync_grey"
                android:text="@string/enter_your_zotero_api_key_manually"
                android:textSize="24dp" />
    </RadioGroup>

    <Button
            android:id="@+id/btn_sync_proceed"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="32dp"
            android:padding="12dp"
            android:text="@string/proceed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/app_frontpage_disclaimer"
            app:layout_constraintEnd_toEndOf="@+id/btn_sync_proceed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/radiogroup_cloudproviders"
            app:layout_constraintTop_toBottomOf="@+id/radiogroup_cloudproviders" />


</androidx.constraintlayout.widget.ConstraintLayout>