<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/syncing_header">

        <ListPreference
            app:defaultValue="zoteroapi"
            app:entries="@array/sync_options_entries"
            app:entryValues="@array/sync_options_values"
            app:key="sync_method"
            app:title="@string/sync_method"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="EXTERNAL_CACHE"
            app:entries="@array/attachment_storage_location_entries"
            app:entryValues="@array/attachment_storage_location_values"
            app:key="attachment_sync_location"
            app:title="@string/setting_sync_attachments_location"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="attachments_uploading_enabled"
            android:title="Offer to upload attachments" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/library_header">
        <ListPreference
            app:defaultValue="TITLE"
            app:entries="@array/sort_options_entries"
            app:entryValues="@array/sort_options_values"
            app:key="sort_method"
            app:title="@string/sort_method_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="should_live_search"
            android:summary="Turn off if your search is too slow"
            android:title="Search as you type" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="check_md5sum_before_attachment_open"
            android:summary="Enabling this may slow down the opening of large attachments"
            android:title="Verify attachment integrity before opening" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Web DAV">
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="true"
            app:enabled="true"
            android:key="use_webdav"
            android:title="Use webdav to access attachments" />

        <Preference
            android:enabled="true"
            android:key="configure_webdav"
            android:title="Configure Webdav" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Advanced">
        <EditTextPreference
            android:enabled="true"
            android:key="http_write_timeout"
            android:title="HTTP Upload timeout (ms)"
            android:defaultValue="60000"
            android:summary="This is the amount of time to wait for an upload to complete before timing out. Use 0 for indefinite."
            android:inputType="number" />
<!--        <Preference-->
<!--            android:enabled="true"-->
<!--            android:key="http_read_timeout"-->
<!--            android:title="HTTP Download timeout (ms)"-->
<!--            android:defaultValue="60000"-->
<!--            android:summary="This is the amount of time to wait for a download to complete before timing out. Use 0 for indefinite."-->
<!--            android:inputType="number" />-->
    </PreferenceCategory>
</PreferenceScreen>
